--- a/app/src/main/res/drawable-hdpi/rounded_corners_button_red.xml
+++ b/app/src/main/res/drawable-hdpi/rounded_corners_button_red.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/colorAccentRed"/>
+    <solid android:color="#EE4242"/>
 
     <corners
         android:topLeftRadius="8dp"
