--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="textColor">#515C6F</color>
     <color name="buttonColor">#557f5f</color>
     <color name="colorPrimaryDark">#161f2b</color>
-    <color name="colorAccent">#2b8c41</color>
+    <color name="colorAccent">#557f5f</color>
     <color name="White">#ffffff</color>
     <color name="opaqueWhite">#8CFFFFFF</color>
     <color name="blackText">#444444</color>
