--- a/app/src/main/res/layout-ldrtl/dialog_product_rating_reviews.xml
+++ b/app/src/main/res/layout-ldrtl/dialog_product_rating_reviews.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +21,7 @@
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:padding="16dp"
-            android:src="@drawable/ic_arrow_back"
+            app:srcCompat="@drawable/ic_arrow_back"
             android:tint="@color/white"
             android:layout_alignParentLeft="true" />
 
