--- a/app/src/main/res/layout/fragment_my_produce.xml
+++ b/app/src/main/res/layout/fragment_my_produce.xml
@@ -11,7 +11,6 @@
         android:id="@+id/recyclerView_my_produce_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
@@ -24,7 +23,7 @@
         app:layout_constraintGuide_percent="0.08" />
 
     <Button
-        android:id="@+id/btn_add_my_produce"
+
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="200dp"
@@ -37,5 +36,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_add_my_produce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@drawable/ic_add_white_24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
