--- a/app/src/main/res/layout/my_produce_list_item.xml
+++ b/app/src/main/res/layout/my_produce_list_item.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/margin_10"
-    android:layout_marginBottom="@dimen/margin_10">
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
